--- a/src/Game.css
+++ b/src/Game.css
@@ -119,6 +119,31 @@ p {
   font-size: 20px;
 }
 
+.view-profile {
+  width: 7.5em;
+  height: 2em;
+  border-radius: 100px;
+  background: #d9aa00;
+  color: #fff;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin: auto;
+}
+.play-game-btn {
+  width: 7.5em;
+  height: 2em;
+  border-radius: 100px;
+  background: #0300d9b8;
+  color: #fff;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin: auto;
+  margin-top: 25px;
+}
 .input-class {
   margin-top: -0.1em;
 }
