--- a/src/Game.css
+++ b/src/Game.css
@@ -144,6 +144,19 @@ p {
   margin: auto;
   margin-top: 25px;
 }
+.logout-btn {
+  width: 7.5em;
+  height: 2em;
+  border-radius: 100px;
+  background: #d90000b8;
+  color: #fff;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  margin: auto;
+  margin-top: 25px;
+}
 .input-class {
   margin-top: -0.1em;
 }
